force-app/main/default/objects/Agreement_Process_Flow_Setting__mdt/Agreement_Process_Flow_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Created by - Apttus</description>
    <label>Agreement Process Flow Setting</label>
    <pluralLabel>Agreement Process Flow Settings</pluralLabel>
</CustomObject>