force-app/main/default/objects/Agreement_Process_Flow_Setting__mdt/fields/Agreement_Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Process_Flow__c</fullName>
    <inlineHelpText>Enter Agreement Action Flow Name ( Full Name)</inlineHelpText>
    <label>Agreement Process Flow</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>