force-app/main/default/objects/Agreement_Process_Flow_Setting__mdt/fields/Agreement_Process_Flow_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Process_Flow_Short_Name__c</fullName>
    <inlineHelpText>Enter Short Name for the process flow and keep it unique</inlineHelpText>
    <label>Agreement Process Flow Short Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>