force-app/main/default/objects/Agreement_Process_Flow_Setting__mdt/fields/Agreement_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Record_Type__c</fullName>
    <inlineHelpText>Enter Agreement Record Type. You can add multiple values here separated by comma.</inlineHelpText>
    <label>Agreement Record Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>