force-app/main/default/objects/Agreement_Process_Flow_Setting__mdt/fields/AgreementOutputFormats__c.field-meta.xml
<CustomField>
    <fullName>AgreementOutputFormats__c</fullName>
    <inlineHelpText>Define allowable agreement output format separated by semi-colon.</inlineHelpText>
    <label>AgreementOutputFormats</label>
    <length>80</length>
    <type>Text</type>
</CustomField>