force-app/main/default/objects/Agreement_Process_Flow_Setting__mdt/fields/Auto_Activation__c.field-meta.xml
<CustomField>
    <fullName>Auto_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please define if Auto Activation of Agreement needs to be enabled.</inlineHelpText>
    <label>Auto Activation</label>
    <type>Checkbox</type>
</CustomField>