force-app/main/default/objects/Agreement_Process_Flow_Setting__mdt/fields/Help_Me_Understand__c.field-meta.xml
<CustomField>
    <fullName>Help_Me_Understand__c</fullName>
    <inlineHelpText>This field is used to Keep Salesforce Id of the recording loaded in Salesforce as files. You can only add one Id. Also video loaded here will be shown on Page Layout to explain about specific page component.</inlineHelpText>
    <label>Help Me Understand</label>
    <length>18</length>
    <type>Text</type>
</CustomField>