force-app/main/default/objects/Agreement_Process_Flow_Setting__mdt/fields/Show_Me_Flow__c.field-meta.xml
<CustomField>
    <fullName>Show_Me_Flow__c</fullName>
    <inlineHelpText>This field is used to Keep Salesforce Id of the recording loaded in Salesforce as files. You can only add one Id. Also video loaded here will be shown on Page Layout to explain about business flow for specific Agreement.</inlineHelpText>
    <label>Show Me Flow</label>
    <length>18</length>
    <type>Text</type>
</CustomField>